优化新增会话的保存功能，修复保存为新建的问题